--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -621,3 +621,24 @@
     ISSN = {1540-7993},
     month = {April},
 }
+
+@InProceedings{Lipp2018meltdown,
+    author = {Moritz Lipp and Michael Schwarz and Daniel Gruss and Thomas Prescher and Werner Haas and Anders Fogh and Jann Horn and Stefan Mangard and Paul Kocher and Daniel Genkin and Yuval Yarom and Mike Hamburg},
+    title = {Meltdown: Reading Kernel Memory from User Space},
+    booktitle = {27th {USENIX} Security Symposium ({USENIX} Security 18)},
+    year = {2018},
+}
+
+@InProceedings{Kocher2018spectre,
+    author = {Paul Kocher and Jann Horn and Anders Fogh and and Daniel Genkin and Daniel Gruss and Werner Haas and Mike Hamburg and Moritz Lipp and Stefan Mangard and Thomas Prescher and Michael Schwarz and Yuval Yarom},
+    title = {Spectre Attacks: Exploiting Speculative Execution},
+    booktitle = {40th IEEE Symposium on Security and Privacy (S\&P'19)},
+    year = {2019},
+}
+
+@Online{FedoraSysretMit,
+    title = {Fedora alert FEDORA-2006-423 (kernel)},
+    author = {Jones, Dave},
+    url = {https://lwn.net/Articles/180820/},
+    urldate = {2020-02-04}
+}
