--- a/thesis/sections/discussion.tex
+++ b/thesis/sections/discussion.tex
@@ -236,7 +236,7 @@ These two examples stress that the precise phrasing of the assumptions is critic
 While it would be sufficient to find a stronger precondition for these assumptions in existing code-bases, it is non-trivial whether such preconditions are easy to find or whether the assumptions might be rephrased such that they still grant the absence of information flow related bugs but are easier to verify in programs.
 This topic, though, cannot be handled as part of this thesis and as such marks future work.
 
-\section{Trustworthiness}
+\section{Trustworthiness of the Approach}
 \label{sec:trustworthiness}
 
 Verification processes must not be arbitrary.
@@ -297,7 +297,7 @@ But it is unclear
 \end{enumerate*}
 We mark this problem as future work.
 
-\section{Abstract Model}
+\section{Alternative Levels of Abstraction}
 
 One might ask, why it was decided to simulate all flows of information through the model of the MINRV8 architecture and indeed: In scope of this thesis, the actual content of registers is not mandatory, i.e. the actual contents of registers could be removed from the model such that only information flow tracking labels are tracked.
 Register values do play a role when memory is indexed, but this could likely be abstracted by non-deterministically choosing a memory location to be targeted by loads and stores.
@@ -338,7 +338,7 @@ This option only shrinks the state space by a linear factor - nevertheless it mi
 The gist of these findings is:
 Whereas in the work of \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17} tracking of each and every bit for a given system was crucial because the authors \textit{could not choose where bugs occur}, it seems that in our more-high level approach, for every bug \enquote{imaginable}, there is a very simple trace illustrating it: nuXmv is able to choose where a bug occurs since it quantifies over programs as opposed to the work of \citeauthor{Ferraiuolo17} where the program of interest is fixed.
 
-\section{Requirements}
+\section{Reflection on Requirements}
 \label{sec:discuss-requirements}
 
 In the introduction, three goals were set for this thesis: it was claimed that the approach presented as part of this thesis is \textit{viable}, i.e. feasible, realistic and generalizable, \textit{effective}, i.e. it is able to detect issues, and \textit{supplemental}, i.e. it enhances on related work.
