--- a/thesis/sections/introduction.tex
+++ b/thesis/sections/introduction.tex
@@ -62,14 +62,15 @@ Additionally, using nuXmv allows for enhancing on the approach proposed by \cite
 In his work, \citeauthor{Reid17} focused on higher lever properties that were limited to making specifications about a single transition of the processor only, i.e. that only take the pre- and post-state of a single cycle of the processor into account.
 nuXmv on the other hand allows to consider infinite sequences of instructions, i.e. sequences of processor-transitions, of unbounded length.
 
-This thesis is structured as follows:
+\section{Thesis Structure}
+
 In chapter \ref{chp:background}, the background of this thesis will be introduced.
 This includes both key papers of \citeauthor{Reid17} and \citeauthor{Ferraiuolo17} as well as \glspl{isa} and model checkers.
 An introduction to \gls{risc} architectures and their ecosystem will be discussed concluding with a threat model for this thesis.
 After this, model checkers will be explained.
 At the end of this chapter, the methodology of this thesis will be discussed in more detail.
 
-In chapter \ref{chp:arch}, the RISC-V architecture and a new, minimal, RISC-V-inspired architecture called MINRV8 will be introduced.
+In chapter \ref{chp:arch}, the RISC-V architecture and a new, minimal, RISC-V-inspired architecture called MINRV8 will be developed.
 Following up on this, it will be described how the MINRV8 architecture was implemented in nuXmv.
 
 Chapter \ref{chp:ifc} details what information flow tracking means in context of an \gls{isa}, how specifically it can be applied to MINRV8, and how it was implemented in nuXmv, i.e. it will be discussed how we applied the work of \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17} to \glspl{isa} leading finally to the higher level properties that implement information flow control for the MINRV8 architecture.
