thesis: Spell -'t/-'d words in full

--- a/thesis/preface/acknowledgements.tex
+++ b/thesis/preface/acknowledgements.tex
@@ -6,7 +6,7 @@ I am very grateful that even after my internship at Arm ended, he put his free t
 Without his guidance, I would not have been able to write, not even start this thesis.
 
 Secondly, I want to thank Jörn Hoffmann of the department of Technische Informatik who agreed to supervise me at the University of Leipzig.
-Without having known me or having a direct affiliation to the topic of my thesis, he allowed me to officially write this thesis and gave guidance whenever I wasn't sure about the direction of my thesis.
+Without having known me or having a direct affiliation to the topic of my thesis, he allowed me to officially write this thesis and gave guidance whenever I was not sure about the direction of my thesis.
 
 Also I want to thank Prof. Dr. Andreas Maletti of the department of Algebraische und logische Grundlagen der Informatik.
 When I was working on my thesis but was not yet supervised by someone at my university, he helped me to keep motivated whenever I felt lost because of the physical distance to my unofficial supervisor.
